--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,8 @@
         android:contentDescription="@null"
         android:src="@drawable/ic_fab_icon"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/onBoardingSubHeading" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
