--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,10 @@
     <color name="on_boarding_span_text_color">@color/orange</color>
     <color name="on_boarding_sub_heading_text_color">@color/blue_magenta</color>
     <color name="status_bar_color">@color/white</color>
+    <color name="text_color">@color/dark_blue</color>
+    <color name="subheading_color">@color/blue_magenta</color>
+    <color name="box_stroke_color">@color/dark_blue</color>
+    <color name="button_color">@color/dark_blue</color>
+    <color name="button_text_color">@color/off_white</color>
+
 </resources>
