--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -5,15 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".auth.fragments.LoginFragment">
+    tools:context=".auth.fragments.SignupFragment">
 
     <TextView
-        android:id="@+id/tvLoginHeading"
+        android:id="@+id/tvSignupHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/large_margin"
         android:fontFamily="@font/dm_sans_bold"
-        android:text="@string/login_fragment_heading"
+        android:text="@string/signup_fragment_heading"
         android:textColor="@color/text_color"
         android:textSize="32sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -21,19 +21,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvLoginSubHeading"
+        android:id="@+id/tvSignupSubHeading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/small_margin"
         android:fontFamily="@font/dm_sans_regular"
-        android:text="@string/login_fragment_sub_heading"
+        android:text="@string/signup_fragment_sub_heading"
         android:textColor="@color/subheading_color"
-        app:layout_constraintLeft_toLeftOf="@+id/tvLoginHeading"
-        app:layout_constraintRight_toRightOf="@+id/tvLoginHeading"
-        app:layout_constraintTop_toBottomOf="@+id/tvLoginHeading" />
+        app:layout_constraintLeft_toLeftOf="@+id/tvSignupHeading"
+        app:layout_constraintRight_toRightOf="@+id/tvSignupHeading"
+        app:layout_constraintTop_toBottomOf="@+id/tvSignupHeading" />
 
     <LinearLayout
-        android:id="@+id/loginContainer"
+        android:id="@+id/SignupContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/extra_large_margin"
@@ -41,7 +41,27 @@
         android:padding="@dimen/medium_margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLoginSubHeading">
+        app:layout_constraintTop_toBottomOf="@+id/tvSignupSubHeading">
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/field_username"
+            app:boxStrokeColor="@color/box_stroke_color"
+            app:errorEnabled="true"
+            app:hintTextColor="@color/text_color"
+            app:placeholderText="eg. Brandone Louis"
+            app:startIconDrawable="@drawable/ic_person">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etUsername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/dm_sans_medium"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -63,7 +83,6 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
@@ -84,18 +103,8 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:id="@+id/tvForgetPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="@string/field_forgot_password"
-            android:fontFamily="@font/dm_sans_regular"
-            android:textColor="@color/text_color"
-            android:textSize="14sp" />
-
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnSignup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/medium_margin"
@@ -103,21 +112,20 @@
             android:backgroundTint="@color/button_color"
             android:fontFamily="@font/dm_sans_medium"
             android:padding="@dimen/button_padding"
-            android:text="@string/field_login"
+            android:text="@string/field_signup"
             android:textColor="@color/button_text_color"
             android:textSize="16sp"
             app:cornerRadius="6dp" />
 
         <TextView
-            android:id="@+id/tvSignup"
+            android:id="@+id/tvLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/sign_up_prompt"
+            android:text="@string/login_prompt"
             android:textColor="@color/text_color"
             android:textSize="14sp" />
-
-
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
