--- a/app/src/main/res/layout/fragment_forgot_pass.xml
+++ b/app/src/main/res/layout/fragment_forgot_pass.xml
@@ -56,6 +56,7 @@
             android:src="@drawable/ic_forget_password" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etEmailContainer"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
