--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -44,6 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvLoginSubHeading">
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etEmailContainer"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,6 +66,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/etPasswordContainer"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
