JobSpot - Implemented Navigation Between Authentication Fragments and Designed UI for StudentDetail Fragment

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -15,5 +15,8 @@
     <color name="button_tint_color">@color/dark_blue</color>
     <color name="button_tint_text_color">@color/white</color>
     <color name="button_tint_border_color">@color/white</color>
+    <color name="power_spinner_arrow_tint">@color/white</color>
+    <color name="power_spinner_border_active">@color/white</color>
+    <color name="power_spinner_border_in_active">@color/black</color>
 
 </resources>
