JobSpot - Implemented Student Detail, Address and Academic Fragment also included the input validation for the respective field

--- a/app/src/main/res/layout/fragment_student_detail.xml
+++ b/app/src/main/res/layout/fragment_student_detail.xml
@@ -126,6 +126,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.skydoves.powerspinner.PowerSpinnerView
+                android:id="@+id/genderSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|start"
@@ -149,7 +150,7 @@
         </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnNext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/medium_margin"
