JobSpot - Implemented Resume Fragment to fetch pdf file from the device and also forged the BottomSheetDialog inside ResumeFragment for the removal of file

--- a/app/src/main/res/layout/fragment_student_address.xml
+++ b/app/src/main/res/layout/fragment_student_address.xml
@@ -72,10 +72,8 @@
             app:startIconDrawable="@drawable/ic_address"
             app:boxStrokeColor="@color/box_stroke_color"
             app:errorEnabled="true"
-            app:helperTextEnabled="true"
-            app:helperText="(optional)"
             app:hintTextColor="@color/text_color"
-            app:placeholderText="Address line 2">
+            app:placeholderText="Address line 2 (optional)">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etAddressTwo"
