--- a/app/src/main/res/layout/uploaded_pdf_view.xml
+++ b/app/src/main/res/layout/uploaded_pdf_view.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:fontFamily="@font/dm_sans_medium"
+                android:maxLines="2"
                 android:textColor="@color/text_color"
                 android:textSize="16sp"
                 tools:text="Krish Parekh - UI/UX Designer" />
