--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -25,4 +25,7 @@
     <color name="bottom_sheet_text_color">@color/dark_blue</color>
     <color name="bottom_sheet_sub_text">@color/blue_magenta</color>
     <color name="bottom_sheet_button_text_color">@color/white</color>
+
+    <color name="loading_dialog_background_color">@color/white</color>
+    <color name="loading_dialog_text_color">@color/dark_blue</color>
 </resources>
