--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -28,4 +28,8 @@
 
     <color name="loading_dialog_background_color">@color/white</color>
     <color name="loading_dialog_text_color">@color/dark_blue</color>
+
+    <color name="bottom_nav_icon_tint_active">@color/off_white</color>
+    <color name="bottom_nav_background_color">@color/dark_blue</color>
+    <color name="bottom_nav_indicator_color">@color/kimberly</color>
 </resources>
