--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -117,7 +117,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="@dimen/medium_margin"
                         android:fontFamily="@font/dm_sans_bold"
-                        tools:text="50"
+                        android:text="50"
                         android:textAlignment="center"
                         android:textColor="@color/text_color"
                         android:textSize="22sp" />
@@ -201,6 +201,7 @@
             app:layout_constraintTop_toBottomOf="@+id/llStatusContainer" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvRecentJobs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
