--- a/app/src/main/res/layout/activity_job_view.xml
+++ b/app/src/main/res/layout/activity_job_view.xml
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/dm_sans_bold"
             android:paddingVertical="@dimen/small_padding"
+            android:textAlignment="center"
             android:textColor="@color/text_color"
             android:textSize="26sp"
             app:layout_constraintLeft_toLeftOf="@+id/ivCompanyLogo"
@@ -53,6 +54,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/dm_sans_regular"
             android:paddingVertical="@dimen/small_padding"
+            android:textAlignment="center"
             android:textColor="@color/text_color"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="@+id/tvRole"
@@ -112,16 +114,6 @@
                     app:layout_constraintLeft_toLeftOf="@+id/tvStudentApplied"
                     app:layout_constraintTop_toBottomOf="@+id/tvStudentApplied"
                     tools:text="50" />
-
-                <ImageView
-                    android:id="@+id/ivStudentApplied"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@null"
-                    android:src="@drawable/ic_right_arrow"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
